--- a/src/app/home/board/board.component.html
+++ b/src/app/home/board/board.component.html
@@ -20,16 +20,18 @@
         <tbody>
           <tr *ngFor='let res of response; let i = index'>
                 <th>{{(i+1)}} </th>
+
                 <td *ngFor='let temp of res; let j = index'>
-                  <span *ngIf='temp.type!= "details" && temp.type!="renew" ' >  {{temp.value}} </span>
-                  <span *ngIf='temp.type == "renew" '>
-                    <button *ngIf='temp.value >6' class="btn btn-success" > {{temp.value}} <span style="display:none">more than 6 months</span> </button>
-                    <button *ngIf='temp.value <= 6 && temp.value >2' class="btn btn-primary" > {{temp.value}}   <span style="display:none">more than 2 months</span>  </button>
-                    <button *ngIf='temp.value <= 2 && temp.value >=2' class="btn btn-warning" > {{temp.value}}   <span style="display:none">less than 2 6 months </span>  </button>
-                    <button *ngIf='temp.value <=1' class="btn btn-danger" > {{temp.value}}  <span style="display:none">less than 1 2 3 4 5 6 months </span>  </button>
+                  <span *ngIf='temp.type!= "Details" && temp.type!="renewtime"' > &nbsp; {{temp.value}} </span>
+                  <span *ngIf='temp.type == "renewtime"'>
+                     <!-- &nbsp;  <button class="btn btn-success"> {{temp.value}}</button> -->
+                     &nbsp; <button *ngIf='temp.diffsec >15552000' class="btn btn-success" > {{temp.value}} <span style="display:none">more than 6 months</span> </button>
+                     &nbsp; <button *ngIf='temp.diffsec <= 15552000 && temp.diffsec >5184000' class="btn btn-primary" > {{temp.value}}   <span style="display:none">more than 2 months</span>  </button>
+                     &nbsp; <button *ngIf='temp.diffsec <= 5184000 && temp.diffsec >=2592000' class="btn btn-warning" > {{temp.value}}   <span style="display:none">less than 2 6 months </span>  </button>
+                     &nbsp; <button *ngIf='temp.diffsec <=2592000' class="btn btn-danger" > {{temp.value}}  <span style="display:none">less than 1 2 3 4 5 6 months </span>  </button>
                   </span>
 
-                  <span *ngIf='temp.type == "details" '> <button class="btn btn-success" (click)="getEmployeeDetails(temp.value)"> Details </button> </span>
+                  <span *ngIf='temp.type == "Details"'> &nbsp; <button class="btn btn-success" (click)="getEmployeeDetails(temp.value)"> Details </button> </span>
 
                 </td>
 
