--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -2,17 +2,49 @@
 
   <div class="row justify-content-center" >
 
-    <div class="col-12" ><br></div>
+    <!-- <div class="col-12" ><br></div> -->
 
-    <div class="col-7 col-lg-7 col-md-7 col-sm-12 divHeight1" >
-      <app-graph></app-graph>
+    <div class="col-lg-7 col-md-7 col-sm-12 divHeight1"  style="overflow-y:auto" >
+      <!-- <app-graph></app-graph> -->
+
+      <div class="">
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist" style="margin-left:0; margin-right:0">
+          <li class="nav-item">
+            <a class="nav-link active" data-toggle="tab" href="#reg" style=""> Regular  </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#pro" style=""> Professional </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#vend" style=""> Third Party </a>
+          </li>
+        </ul>
+        <!-- Tab panes -->
+        <div class="tab-content">
+
+          <div id="reg" class="container tab-pane active"  style="overflow:auto;   border-radius:1px; background: linear-gradient(to right, #fff, #f3f3f3);">
+            <app-employee-type1></app-employee-type1>
+          </div>
+
+          <div id="pro" class="container tab-pane fade" style="overflow:auto;   border-radius:1px; background: linear-gradient(to right, #fff, #f3f3f3);">
+            <app-employee-type2></app-employee-type2>
+          </div>
+
+          <div id="vend" class="container tab-pane fade" style=" overflow:auto;   border-radius:1px; background: linear-gradient(to right, #fff, #f3f3f3);">
+            <app-employee-type3></app-employee-type3>
+          </div>
+
+        </div>
+      </div>
+
     </div>
 
-    <div class="col-4 col-lg-4 col-md-4 col-sm-12 divHeight1" >
+    <div class="col-lg-4 col-md-4 col-sm-12 divHeight1" style="height:80vh; overflow-y:auto" >
       <app-notification></app-notification>
     </div>
 
-    <div class="col-3 col-lg-3 col-md-3 col-sm-12 divHeight1" >
+    <!-- <div class="col-3 col-lg-3 col-md-3 col-sm-12 divHeight1" >
 
       <div class="row" >
 
@@ -77,12 +109,11 @@
 
         </tbody>
       </table>
-    </div>
+    </div> -->
 
   </div>
 
 </div>
-
 
 <!-- Modal -->
 <div class="modal fade" id="employeeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
