--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light primaryBackground ">
-  <a class="navbar-brand primaryText" [routerLink]="['/home/dashboard']">Dashboard</a>
+  <a class="navbar-brand primaryText" [routerLink]="['/home/dashboard']">Admin Dashboard</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mr-auto">
-      <!-- <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li> -->
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Employee ID" aria-label="Search">
+        <button class="btn btn-secondary navbarSearch" type="submit" >Search</button>
+      </form>
     </ul>
+
     <span class="navbar-text primaryText">
-      Logout
+      <!-- <input type="text" name="" value="" class="navbarSearc" > &nbsp;  Logout -->
+    </span>
+    <span class="navbar-text primaryText">
+      &nbsp; Logout
     </span>
   </div>
 </nav>
