--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,16 @@ $primary-color2: slateblue;
 $secondary-color: #67d84c;
 body{
   color: darkslategray;
-  background-color: #f9f9f9;
-  // background: linear-gradient($primary-text-color, #AD9CD5);
+  // background-color: #e8e8e8;
+  background: linear-gradient(to right, #bdbdbd, #f3f3f3);
 }
+
+.navbarSearch{
+ background-color: #5267ff;
+   color: white;
+   border: 1px solid #98a6ff !important;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
@@ -36,12 +43,14 @@ body{
 }
 
 .divHeight1{
-  height: 400px;
-  border: 3px solid #67d84c;
-  border-radius: 8px;
-  margin: 8px;
+  min-height: 600px;
+  box-shadow: 6px 7px 14px 0px #888888;
+  // border: 3px solid #67d84c;
+  border-radius: 3px;
+  margin: 12px;
   background: #fff;
   overflow-y: auto;
+  margin-top: 25px;
 }
 
 a{
@@ -87,6 +96,15 @@ th{
   height:70px;
 }
 .table td{
-  padding:0.20rem !important;
-  // margin-bottom: 0.10rem !important;
+  // padding:0.20rem !important;
+  // margin-bottom: 0.1rem !important;
+}
+
+.sTable{
+  border: 2px solid $secondary-color;
+}
+
+.sTableBody{
+  background-color: $secondary-color;
+  color: #fff
 }
