--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -11,13 +11,13 @@
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist" style="margin-left:0; margin-right:0">
           <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#reg" style=""> Regular  </a>
+            <a class="nav-link active" data-toggle="tab" href="#reg" style="" (click)="regular()"> Regular  </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#pro" style=""> Professional </a>
+            <a class="nav-link" data-toggle="tab" href="#pro" style="" (click)="pro()"> Professional </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#vend" style=""> Third Party </a>
+            <a class="nav-link" data-toggle="tab" href="#vend" style=""  (click)="third()"> Third Party </a>
           </li>
         </ul>
         <!-- Tab panes -->
