--- a/src/app/home/employee-type1/employee-type1.component.html
+++ b/src/app/home/employee-type1/employee-type1.component.html
@@ -17,17 +17,17 @@
 
           <div class="col-12" >
             <br>
-            <button type="button" name="button" class="btn btn-success" style="width:100%" > Upload Excel </button>
+            <button type="button" name="button" class="btn btn-success" style="width:100%" ><i class="fas fa-users"></i> View Employees </button>
           </div>
 
           <div class="col-12" >
             <br>
-            <button type="button" name="button" class="btn btn-success" style="width:100%" > Upload Excel </button>
+            <button type="button" name="button" class="btn btn-success" style="width:100%" > <i class="far fa-file-excel"></i> Upload Excel </button>
           </div>
 
           <div class="col-12" >
             <br>
-            <button type="button" name="button" class="btn btn-success" style="width:100%" > Upload Excel </button>
+            <button type="button" name="button" class="btn btn-success" style="width:100%" > <i class="fas fa-user"></i><b>+</b> Employee </button>
           </div>
 
         </div>
@@ -38,7 +38,7 @@
     <div class="col-lg-8 col-md-8 col-sm-12" style="height: 37vh; overflow-y: auto">
       <br>
       <h5> Employee Department Category </h5>
-        <app-summary-table></app-summary-table>
+        <app-department-category></app-department-category>
     </div>
 
   </div>
