--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,6 +21,4 @@
 </nav>
 <router-outlet></router-outlet>
 
-<!-- <br>
-<p class="text-center"> Developed and maintained by QCI IT-Cell </p>
-<br> -->
+<!-- <p class="text-center"> Developed and maintained by QCI IT-Cell </p> -->
