--- a/src/app/home/department-category/department-category.component.html
+++ b/src/app/home/department-category/department-category.component.html
@@ -6,12 +6,12 @@
       <thead class="sTableBody">
         <tr>
           <th scope="col" >#</th>
-          <th scope="col">Month</th>
-          <th scope="col">Notification1</th>
-          <th scope="col">Notification2</th>
+          <th scope="col">Department</th>
+          <th scope="col">Employees</th>
+          <th scope="col">Details</th>
         </tr>
       </thead>
-      <tbody >
+      <tbody>
         <tr>
           <th scope="row">1</th>
           <td>Mark</td>
