--- a/src/app/home/board-employee-type/board-employee-type.component.html
+++ b/src/app/home/board-employee-type/board-employee-type.component.html
@@ -3,12 +3,11 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a [routerLink]="['/home/dashboard']" >Dashboard</a></li>
-      <li class="breadcrumb-item"><a [routerLink]="['/home/employeeType']" [queryParams]="{empType: empType }">{{empType}}</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Board - <b> {{departmentName}} </b> </li>
+      <li class="breadcrumb-item active" aria-current="page"> <b> {{empType}} </b> </li>
     </ol>
   </nav>
   <br>
-  <div class="row justify-content-center" >
+  <div class="row justify-content-center">
 
     <div class="col-10"  style="background-color:white; border: 10px solid white; border-radius:5px"  >
       <div *ngIf='!flag' >Hang on while we are checking the data available!</div>
@@ -32,9 +31,9 @@
                     <button *ngIf='temp.diffsec <=2592000' class="btn btn-danger" > {{temp.value}}  <span style="display:none">less than 1 2 3 4 5 6 months </span>  </button>
                   </span>
 
-                  <span *ngIf='temp.type == "button" && !temp.value'>  N A  </span>
+                  <span *ngIf='temp.type == "button" && !temp.value'> N A </span>
 
-                  <span *ngIf='temp.type == "Details" && temp.type!="button"'> <button class="btn btn-success" (click)="getEmployeeDetails(temp.value)"> Details </button> </span>
+                  <span *ngIf='temp.type == "Details" && temp.type!="button"'>  <button class="btn btn-success" (click)="getEmployeeDetails(temp.value)"> Details </button> </span>
 
                 </td>
 
