--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -40,7 +40,7 @@
 
     </div>
 
-    <div class="col-lg-4 col-md-4 col-sm-12 divHeight1" style="height:80vh; overflow-y:auto" >
+    <div class="col-lg-4 col-md-4 col-sm-12 divHeight1" style=" overflow-y:auto" >
       <app-notification></app-notification>
     </div>
 
