--- a/src/app/home/employee-only/employee-only.component.html
+++ b/src/app/home/employee-only/employee-only.component.html
@@ -3,18 +3,21 @@
   <nav aria-label="breadcrumb" *ngIf="details" >
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a [routerLink]="['/home/dashboard']">Dashboard</a></li>
-      <li class="breadcrumb-item"><a [routerLink]="['/home/employeeType']" [queryParams]="{empType: empType }">{{empType}}</a></li>
-      <li class="breadcrumb-item"><a [routerLink]="['/home/board']" [queryParams]="{id: details[3].bid, empType: empType }">Board - {{details[3].value}}</a></li>
+      <!-- <li class="breadcrumb-item"><a [routerLink]="['/home/employeeType']" [queryParams]="{empType: empType }">{{empType}}</a></li>
+      <li class="breadcrumb-item"><a [routerLink]="['/home/board']" [queryParams]="{id: details[3].bid, empType: empType }">Board - {{details[3].value}}</a></li> -->
       <li class="breadcrumb-item active" aria-current="page">Employee - <b> {{details[1].value}} </b>  </li>
     </ol>
   </nav>
   <p class="text-center" style=" " ><i style="color: #FF9800; font-size:55px;"  class="fas fa-user"></i> &nbsp; &nbsp; <span style="cursor: pointer;" (click)="editEmployee()"> <i class="fas fa-edit"></i> Edit </span> </p>
   <div class="row justify-content-center" >
     <div class="col-10 infoBox" style="background-color:white; border: 10px solid white; border-radius:5px" >
-      <div class="row justify-content-center" >
+      <div class="row justify-content-center" *ngIf="details">
         <div class="col-6 col-lg-6 col-md-6 col-sm-12  infoDiv" *ngFor="let data of details" style="">
         {{data.type}} : <span style="background-color: #c7ceff" *ngIf="data.value"> &nbsp; {{data.value}} &nbsp; </span>
         </div>
+      </div>
+      <div *ngIf="!details" class="text-center" >
+        Employee not found!
       </div>
     </div>
   </div>
