--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
     <span class="navbar-text primaryText">
       <!-- <input type="text" name="" value="" class="navbarSearc" > &nbsp;  Logout -->
     </span>
-    <span class="navbar-text primaryText">
+    <span class="navbar-text primaryText" style="cursor: pointer;" (click)="logout()">
       &nbsp; Logout
     </span>
   </div>
