--- a/src/app/home/board-employee-type/board-employee-type.component.html
+++ b/src/app/home/board-employee-type/board-employee-type.component.html
@@ -9,7 +9,7 @@
   <br>
   <div class="row justify-content-center">
 
-    <div class="col-10"  style="background-color:white; border: 10px solid white; border-radius:5px"  >
+    <div class="col-10"  style="background-color:white; border: 10px solid white; border-radius:5px; overflow:auto"  >
       <div *ngIf='!flag' >Hang on while we are checking the data available!</div>
       <table *ngIf='flag' id="exampleFormResponse" class="table table-striped  " cellspacing="0" >
         <thead>
@@ -41,5 +41,6 @@
         </tbody>
       </table>
     </div>
+
   </div>
 </div>
