--- a/src/app/home/employee-only/employee-only.component.html
+++ b/src/app/home/employee-only/employee-only.component.html
@@ -12,7 +12,7 @@
   <div class="row justify-content-center" >
     <div class="col-10 infoBox" style="background-color:white; border: 10px solid white; border-radius:5px" >
       <div class="row justify-content-center" *ngIf="details">
-        <div class="col-6 col-lg-6 col-md-6 col-sm-12  infoDiv" *ngFor="let data of details" style="">
+        <div class="col-6 col-lg-6 col-md-6 col-sm-12  infoDiv" *ngFor="let data of details" style="min-height:80px !important; overflow-y:auto">
         {{data.type}} : <span style="background-color: #c7ceff" *ngIf="data.value"> &nbsp; {{data.value}} &nbsp; </span>
         </div>
       </div>
