--- a/src/app/home/employee-type2/employee-type2.component.html
+++ b/src/app/home/employee-type2/employee-type2.component.html
@@ -21,12 +21,12 @@
 
           <div class="col-12" >
             <br>
-            <button type="button" name="button" class="btn btn-success" style="width:100%" > <i class="far fa-file-excel"></i> Upload Excel </button>
+            <button type="button" name="button" class="btn btn-success" style="width:100%"  (click)="uploadExcelModal()"> <i class="far fa-file-excel"></i> Upload Excel </button>
           </div>
 
           <div class="col-12" >
             <br>
-            <button type="button" name="button" class="btn btn-success" style="width:100%" > <i class="fas fa-user"></i><b>+</b> Employee </button>
+            <button type="button" name="button" class="btn btn-success" style="width:100%" (click)="addEmployee()" > <i class="fas fa-user"></i><b>+</b> Employee </button>
           </div>
 
         </div>
@@ -40,5 +40,64 @@
         <app-department-category></app-department-category>
     </div>
 
+  </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="employeeModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title " id="exampleModalLabel"> <a> Add an employee - {{empType}}</a></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" style="height:500px; overflow-y:auto">
+
+        <div class="form-group" *ngFor="let data of form" >
+          <label for="exampleInputEmail1">{{data.type}}</label>
+          <span *ngIf = 'data.value == "Professional"' >
+            <input type="text" class="form-control" [(ngModel)]=data.value disabled>
+          </span>
+          <span  *ngIf = 'data.value != "Professional"'>
+            <input type="text" class="form-control" [(ngModel)]=data.value>
+          </span>
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success" (click)="saveNewEmployee()">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- File Upload Modal -->
+<div class="modal fade" id="uploadExcelModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title " id="exampleModalLabel"> <a> Upload Excel Data </a></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" style="height:200px; overflow-y:auto">
+
+        <h5> Instrunctions </h5>
+        <p> Please upload the excel only with the template adviced.</p>
+
+        <input type="file" (change)="uploadExcel($event);" />
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <!-- <button type="button" class="btn btn-success" (click)="saveNewEmployee()">Save</button> -->
+      </div>
+    </div>
   </div>
 </div>
