--- a/src/app/home/board-quick-summary/board-quick-summary.component.html
+++ b/src/app/home/board-quick-summary/board-quick-summary.component.html
@@ -26,10 +26,10 @@
                   <span *ngIf='temp.type!= "Details" && temp.type!="renewtime" && temp.type!="button"' > {{temp.value}} </span>
                   <span *ngIf='temp.type == "button" && temp.value'>
                      <!-- &nbsp;  <button class="btn btn-success"> {{temp.value}}</button> -->
-                    <button *ngIf='temp.diffsec >15552000' class="btn btn-success" > {{temp.value}} <span style="display:none">more than 6 months</span> </button>
-                    <button *ngIf='temp.diffsec <= 15552000 && temp.diffsec >5184000' class="btn btn-primary" > {{temp.value}}   <span style="display:none">more than 2 months</span>  </button>
-                    <button *ngIf='temp.diffsec <= 5184000 && temp.diffsec >=2592000' class="btn btn-warning" > {{temp.value}}   <span style="display:none">less than 2 6 months </span>  </button>
-                    <button *ngIf='temp.diffsec <=2592000' class="btn btn-danger" > {{temp.value}}  <span style="display:none">less than 1 2 3 4 5 6 months </span>  </button>
+                    <button *ngIf='temp.diffsec >15552000' class="btn btn-success" > {{temp.value}} </button>
+                    <button *ngIf='temp.diffsec <= 15552000 && temp.diffsec >5184000' class="btn btn-primary" > {{temp.value}} </button>
+                    <button *ngIf='temp.diffsec <= 5184000 && temp.diffsec >=2592000' class="btn btn-warning" > {{temp.value}}  </button>
+                    <button *ngIf='temp.diffsec <=2592000' class="btn btn-danger" > {{temp.value}}  </button>
                   </span>
 
                   <span *ngIf='temp.type == "button" && !temp.value'>  N A </span>
