--- a/src/app/home/employee-type2/employee-type2.component.html
+++ b/src/app/home/employee-type2/employee-type2.component.html
@@ -19,10 +19,10 @@
             <button type="button" name="button" class="btn btn-success" style="width:100%"  (click)="getEmpType()"><i class="fas fa-users"></i> View Employees </button>
           </div>
 
-          <div class="col-12" >
+          <!-- <div class="col-12" >
             <br>
             <button type="button" name="button" class="btn btn-success" style="width:100%"  (click)="uploadExcelModal()"> <i class="far fa-file-excel"></i> Upload Excel </button>
-          </div>
+          </div> -->
 
           <div class="col-12" >
             <br>
